meja/tests/module_hiding_var.stderr
File "tests/module_hiding_var.meja", line 16, characters 17-20:
Error: Unbound name A.x.
