meja/tests/module_hiding_var.meja
module A = {
  let x = 15;
};

module B = {
  module A = {
    let y = 20;
  };
};

open B;

let () = ignore (A.y);

/* Expect an error, A should be out of scope. */
let () = ignore (A.x);
